--- a/logistics/templates/logcsview.htm
+++ b/logistics/templates/logcsview.htm
@@ -12,24 +12,21 @@
             <th>状态</th>
           </tr>
 {% for i in newsList %}
-{% regroup i.list by logcs.stime as newStime %}
+{% regroup i.list by logcs.ltime as newStime %}
 
   {% for ii in newStime %}
-    {% regroup ii.list by logcs.get_advance_display as advs %}
-
-    {% for iii in advs %}
           <tr class="tr_border_top_black">
-            <td colspan="10">{{ i.grouper|date:"Y-m-d"  }} | {{ ii.grouper }} | {{ iii.grouper }} | <span class="wow_item_8">{{ iii.list|length }}</span></td>
+            <td colspan="10">{{ i.grouper|date:"Y-m-d"  }} | {{ ii.grouper }} | <span class="wow_item_8">{{ ii.list|length }}</span></td>
           </tr>
-      {% for iiii in iii.list %}
+      {% for iii in ii.list %}
                 <tr align="center">
-                  <td width="80px"><a href="{% url 'order:viewOrd' iiii.sn %}">{{ iiii.sn }}</a></td>
-                  <td>{{ iiii.get_typ_display }} | {{ iiii.fnc.cod.get_cod_display }}</td>
-                  <td>{{ iiii.logcs.consignee }} [ {{ iiii.logcs.tel }} ]</td>
-                  <td width="220px">{% if iiii.form %}{{ iiii.form.dman }}{% else %}{{ iiii.logcs.dman.last_name }}{{ iiii.logcs.dman.first_name }}{% endif %}</td>
-                  <td>{{ iiii.get_status_display }} | {{ iiii.fnc.get_status_display }} | {{ iiii.logcs.get_status_display }}</td>
+                  <td width="80px"><a href="{% url 'order:viewOrd' iii.sn %}">{{ iii.sn }}</a></td>
+                  <td>{{ iii.get_typ_display }} | {{ iii.fnc.cod.get_cod_display }}</td>
+                  <td>{{ iii.logcs.consignee }} [ {{ iii.logcs.tel }} ]</td>
+                  <td width="220px">{% if iii.form %}{{ iii.form.dman }}{% else %}{{ iii.logcs.dman.last_name }}{{ iii.logcs.dman.first_name }}{% endif %}</td>
+                  <td>{{ iii.get_status_display }} | {{ iii.fnc.get_status_display }} | {{ iii.logcs.get_status_display }}</td>
                 </tr>
-        {% for item in iiii.pro_set.all %}
+        {% for item in iii.pro_set.all %}
                 <tr align="center">
                   <td align="right" nowrap="true" colspan="2">{{ item.name }}</td>
                   <td>{{ item.spec }}</td>
@@ -39,14 +36,10 @@
         {% endfor %}
                 <tr>
                   <td align="center">地址</td>
-                  <td colspan="5"><a href="{% url 'logistics:baiduMap' iiii.logcs.address|urlencode %}" target="_blank">[ {{ iiii.logcs.area }} ] {{ iiii.logcs.address }}</a></td>
+                  <td colspan="5"><a href="{% url 'logistics:baiduMap' iii.logcs.address|urlencode %}" target="_blank">[ {{ iii.logcs.area }} ] {{ iii.logcs.address }}</a></td>
                 </tr>
-      {% endfor %}
     {% endfor %}
   {% endfor %}
-{% endfor %}
-
-
 {% empty %}
           <tr>
             <td align="center" colspan="10">无记录</td>
