--- a/office/templates/office.htm
+++ b/office/templates/office.htm
@@ -6,7 +6,7 @@
 {% regroup order by get_status_display as newOrd %}
       <table cellpadding="3" cellspacing="1" width="100%">
         <tr>
-          <th colspan="2" align="left"><h3>订单统计</h3></th>
+          <th colspan="2" align="left"><h3>今日订单统计</h3></th>
         </tr>
 {% for i in newOrd %}
         <tr align="center" class="tr_border_top_black">
@@ -29,7 +29,7 @@
 {% regroup logcs by get_status_display as newLogcs %}
       <table cellpadding="3" cellspacing="1" width="100%">
         <tr>
-          <th colspan="2" align="left"><h3>物流统计</h3></th>
+          <th colspan="2" align="left"><h3>今日物流统计</h3></th>
         </tr>
 {% for i in newLogcs %}
         <tr align="center" class="tr_border_top_black">
@@ -52,7 +52,7 @@
 {% regroup pro by get_status_display as newPro %}
       <table cellpadding="3" cellspacing="1" width="100%">
         <tr>
-          <th colspan="2" align="left"><h3>生产统计</h3></th>
+          <th colspan="2" align="left"><h3>今日生产统计</h3></th>
         </tr>
 {% for i in newPro %}
         <tr align="center" class="tr_border_top_black">
@@ -75,7 +75,7 @@
 {% regroup fnc by get_status_display as newFnc %}
       <table cellpadding="3" cellspacing="1" width="100%">
         <tr>
-          <th colspan="2" align="left"><h3>财务统计</h3></th>
+          <th colspan="2" align="left"><h3>今日财务统计</h3></th>
         </tr>
 {% for i in newFnc %}
         <tr align="center" class="tr_border_top_black">
@@ -91,6 +91,98 @@
         <tr align="center" class="tr_border_top_black">
           <td>全部</td>
           <td><strong><a href="{% url 'finance:fnc' %}?c=-1" target="_blank">{{ fnc|length }}</a></strong></td>
+        </tr>
+      </table>
+  </li>
+  <li>
+{% regroup yorder by get_status_display as newOrd %}
+      <table cellpadding="3" cellspacing="1" width="100%">
+        <tr>
+          <th colspan="2" align="left"><h3>昨日订单统计</h3></th>
+        </tr>
+{% for i in newOrd %}
+        <tr align="center" class="tr_border_top_black">
+          <td>{{ i.grouper }}</td>
+          <td><strong><a href="{% url 'order:ords' %}?c={{ i.list.0.status }}&s={{ y }}" target="_blank">{{ i.list|length }}</a></strong></td>
+        </tr>
+{% for ii in i.list %}
+        <tr align="center">
+          <td colspan="10"><strong><a href="{% url 'order:ords' %}?c={{ ii.status }}&s={{ y }}&k={{ ii.sn }}" target="_blank">{{ ii.sn }}</a></strong></td>
+        </tr>
+{% endfor %}
+{% endfor %}
+        <tr align="center" class="tr_border_top_black">
+          <td>全部</td>
+          <td><strong><a href="{% url 'order:ords' %}?c=-1&s={{ y }}" target="_blank">{{ order|length }}</a></strong></td>
+        </tr>
+      </table>
+  </li>
+  <li>
+{% regroup ylogcs by get_status_display as newLogcs %}
+      <table cellpadding="3" cellspacing="1" width="100%">
+        <tr>
+          <th colspan="2" align="left"><h3>昨日物流统计</h3></th>
+        </tr>
+{% for i in newLogcs %}
+        <tr align="center" class="tr_border_top_black">
+          <td>{{ i.grouper }}</td>
+          <td><strong><a href="{% url 'logistics:logcs' %}?c={{ i.list.0.status }}&s={{ y }}" target="_blank">{{ i.list|length }}</a></strong></td>
+        </tr>
+{% for ii in i.list %}
+        <tr align="center">
+          <td colspan="10"><strong><a href="{% url 'logistics:logcs' %}?c={{ ii.status }}&s={{ y }}&k={{ ii.ord.sn }}" target="_blank">{{ ii.ord.sn }}</a></strong></td>
+        </tr>
+{% endfor %}
+{% endfor %}
+        <tr align="center" class="tr_border_top_black">
+          <td>全部</td>
+          <td><strong><a href="{% url 'logistics:logcs' %}?c=-1&s={{ y }}" target="_blank">{{ logcs|length }}</a></strong></td>
+        </tr>
+      </table>  
+  </li>
+  <li>
+{% regroup ypro by get_status_display as newPro %}
+      <table cellpadding="3" cellspacing="1" width="100%">
+        <tr>
+          <th colspan="2" align="left"><h3>昨日生产统计</h3></th>
+        </tr>
+{% for i in newPro %}
+        <tr align="center" class="tr_border_top_black">
+          <td>{{ i.grouper }}</td>
+          <td><strong><a href="{% url 'produce:produce' %}?c={{ i.list.0.status }}&s={{ y }}" target="_blank">{{ i.list|length }}</a></strong></td>
+        </tr>
+{% for ii in i.list %}
+        <tr align="center">
+          <td colspan="10"><strong><a href="{% url 'produce:produce' %}?c={{ ii.status }}&s={{ y }}&k={{ ii.ord.sn }}" target="_blank">{{ ii.ord.sn }}</a></strong></td>
+        </tr>
+{% endfor %}
+{% endfor %}
+        <tr align="center" class="tr_border_top_black">
+          <td>全部</td>
+          <td><strong><a href="{% url 'produce:produce' %}?c=-1&s={{ y }}" target="_blank">{{ pro|length }}</a></strong></td>
+        </tr>
+      </table>
+  </li>
+  <li>
+{% regroup yfnc by get_status_display as newFnc %}
+      <table cellpadding="3" cellspacing="1" width="100%">
+        <tr>
+          <th colspan="2" align="left"><h3>昨日财务统计</h3></th>
+        </tr>
+{% for i in newFnc %}
+        <tr align="center" class="tr_border_top_black">
+          <td>{{ i.grouper }}</td>
+          <td><strong><a href="{% url 'finance:fnc' %}?c={{ i.list.0.status }}&s={{ y }}" target="_blank">{{ i.list|length }}</a></strong></td>
+        </tr>
+{% for ii in i.list %}
+        <tr align="center">
+          <td colspan="10"><strong><a href="{% url 'finance:fnc' %}?c={{ ii.status }}&s={{ y }}&k={{ ii.ord.sn }}" target="_blank">{{ ii.ord.sn }}</a></strong></td>
+        </tr>
+{% endfor %}
+{% endfor %}
+        <tr align="center" class="tr_border_top_black">
+          <td>全部</td>
+          <td><strong><a href="{% url 'finance:fnc' %}?c=-1&s={{ y }}" target="_blank">{{ fnc|length }}</a></strong></td>
         </tr>
       </table>
   </li>
