--- a/logistics/templates/logistics.htm
+++ b/logistics/templates/logistics.htm
@@ -44,7 +44,7 @@
 {% endif %}
           <tr>
             <td align="center">地址</td>
-            <td colspan="5"><a href="{% url 'logistics:baiduMap' i.logcs.address|urlencode %}" target="_blank">[ {{ i.logcs.area }} ] {{ i.logcs.address }}</a></td>
+            <td colspan="5"><a href="{% url 'logistics:baiduMap' %}?address={{ i.logcs.address|urlencode }}" target="_blank">[ {{ i.logcs.area }} ] {{ i.logcs.address }}</a></td>
           </tr>
           <tr align="center">
             <td>时间</td>
@@ -56,7 +56,7 @@
           </tr>
           <tr>
             <td align="center">备注</td>
-            <td colspan="6">速度送</td>
+              <td colspan="6">{{ i.logcs.note }}</td>
           </tr>
 {% empty %}
           <tr>
