--- a/order/templates/orderlist.htm
+++ b/order/templates/orderlist.htm
@@ -35,7 +35,7 @@
 {% endfor %}
           <tr>
             <td align="center">地址</td>
-            <td colspan="5"><a href="{% url 'logistics:baiduMap' i.logcs.address|urlencode %}" target="_blank">[ {{ i.logcs.area }} ] {{ i.logcs.address }}</a></td>
+            <td colspan="5"><a href="{% url 'logistics:baiduMap' %}?address={{ i.logcs.address|urlencode }}" target="_blank">[ {{ i.logcs.area }} ] {{ i.logcs.address }}</a></td>
             <td align="center">{{ i.fee.total|stringformat:"0.2f" }}</td>
           </tr>          
           <tr>
