--- a/finance/templates/financeui.htm
+++ b/finance/templates/financeui.htm
@@ -45,7 +45,7 @@
           </tr>             
           <tr>
             <td align="center">备注</td>
-            <td colspan="6">速度送</td>
+            <td colspan="6">{{ i.logcs.note }}</td>
           </tr>
 {% empty %}
           <tr>
