--- a/print/templates/printord.htm
+++ b/print/templates/printord.htm
@@ -58,12 +58,12 @@
             <td>预发货</td>
             <td>{{ i.logcs.lstime|time:"H:i" }}</td>
             <td>{% if i.form %}{{ i.form.advance }}{% else %}{{ i.logcs.get_advance_display }}{% endif %}</td>
-            <td>{% if i.form %}{{ i.form.dman }}{% else %}{{ i.logcs.dman }}{% endif %}</td>
+            <td>{% if iii.form %}{{ iii.form.dman }}{% else %}{{ iii.logcs.dman.last_name }}{{ iii.logcs.dman.first_name }}{% endif %}</td>
           </tr>
           <tr>
             <td>&nbsp;</td>
             <td align="center">备注</td>
-            <td colspan="6">速度送</td>
+            <td colspan="6">{{ i.logcs.note }}</td>
           </tr>
 {% empty %}
           <tr>
