--- a/order/templates/orderview.htm
+++ b/order/templates/orderview.htm
@@ -1,9 +1,7 @@
-{% extends "shop.base.htm" %}
-
+{% extends "office.base.htm" %}
 
 {% block content %}
-        <div class="pWhite">
-            <h3>订单状态</h3>
+      <h3>订单状态</h3>
             <table width="100%" class="mBottom10">
                 <tr>
                     <td width="100px">订单号：</td>
@@ -71,7 +69,23 @@
                     <td>备注：</td>
                     <td>{{ o.logcs.note }}</td>
                 </tr>
+            </table>    
+            <h3>操作记录</h3>
+            <table width="100%" class="mBottom10">
+                <tr>
+                    <th>操作者</th>
+                    <th>类型</th>
+                    <th>时间</th>
+                    <th>备注</th>
+                </tr>
+{% for i in o.ordlog_set.all %}
+                <tr align="center">
+                    <td>{{ i.user.last_name }}{{ i.user.first_name }}</td>
+                    <td>{{ i.get_typ_display }}</td>
+                    <td>{{ i.time|date:"Y-m-d H:i" }} </td>
+                    <td>{{ i.note }}</td>
+                </tr>
+{% endfor %}
             </table>
-            <center><a class="btnB bBtn" href="{% url 'account:myOrd' %}">返回</a></center>
-        </div>
+            <center><a class="btnB bBtn" href="{{ request.META.HTTP_REFERER }}">返回</a></center>
 {% endblock %}
