--- a/logistics/templates/logcsview.htm
+++ b/logistics/templates/logcsview.htm
@@ -20,7 +20,7 @@
       {% for iii in ii.list %}
                 <tr align="center">
                   <td width="80px"><a href="{% url 'order:viewOrd' iii.sn %}">{{ iii.sn }}</a></td>
-                  <td align="left"><a href="{% url 'logistics:baiduMap' %}?address={{ i.logcs.address|urlencode }}" target="_blank">[ {{ iii.logcs.area }} ] {{ iii.logcs.address }}</a></td>
+                  <td align="left"><a href="{% url 'logistics:baiduMap' %}?address={{ iii.logcs.address|urlencode }}" target="_blank">[ {{ iii.logcs.area }} ] {{ iii.logcs.address }}</a></td>
                   <td width="220px">{% if iii.form %}{{ iii.form.dman }}{% else %}{{ iii.logcs.dman.last_name }}{{ iii.logcs.dman.first_name }}{% endif %}</td>
                   <td>{{ iii.get_status_display }} | {{ iii.fnc.get_status_display }} | {{ iii.logcs.get_status_display }}</td>
                 </tr>
@@ -42,4 +42,5 @@
             <td colspan="20" align="right">共 {{ oList|length }} 条记录</td>
           </tr>
         </table>
+        <script type="text/javascript" src="{{ STATIC_URL }}logistics/js/logistics.configuration.js"></script>
 {% endblock %}
