--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -138,7 +138,7 @@
       <li><a href="{% url 'account:logout' %}">登出</a></li>
     </ul>
     <div id="header">
-        <div id="urHere"><a href="{% url 'office:office' %}" id="index">31kecake 管理中心</a> {% if request.domElement %} <a href="{% url request.domElement.view_name %}">{{ request.title }}</a>{% endif %}</div>
+        <div id="urHere"><a href="{% url 'office:office' %}" id="index">31kecake 管理中心</a> {% if request.domElement %} <a href="{{ request.path }}">{{ request.title }}</a>{% endif %}</div>
         <ul id="toolsBar">
           <li><a href="{% url 'order:newOrdFrm' %}">新订单</a></li>
           <li><a href="{% url 'logistics:baiduMap' %}">地图</a></li>
