--- a/logistics/templates/logistics.htm
+++ b/logistics/templates/logistics.htm
@@ -12,52 +12,62 @@
             <th>状态</th>
             <th>操作</th>
           </tr>
-{% for i in oList %}
+{% regroup oList by logcs.date as newsList %}
+{% for i in newsList %}
+  {% regroup i.list by logcs.ltime as newStime %}
+  {% for ii in newStime %}
+          <tr class="tr_border_top_rare">
+            <td colspan="10">{{ i.grouper|date:"Y-m-d"  }} | {{ ii.grouper }} | <span class="wow_item_8">{{ ii.list|length }}</span></td>
+          </tr>
+    {% for iii in ii.list %}
           <tr align="center" class="tr_border_top_black">
-            <td>{{ i.get_typ_display }}</td>
-            <td><a href="{% url 'order:viewOrd' i.sn %}">{{ i.sn }}</a></td>
-            <td>{{ i.logcs.consignee }} [ {{ i.logcs.tel }} ]</td>
-            <td>{{ i.fee.paid|stringformat:"0.2f" }} | {{ i.fee.kpchng|stringformat:"0.2f" }} | {{ i.fee.total|stringformat:"0.2f" }} | {{ i.fnc.cod.get_cod_display }}</td>
-            <td>{{ i.get_status_display }} | {{ i.fnc.get_status_display }} | {{ i.logcs.get_status_display }}</td>
-            {% optr i %}
+            <td>{{ iii.get_typ_display }}</td>
+            <td><a href="{% url 'order:viewOrd' iii.sn %}">{{ iii.sn }}</a></td>
+            <td>{{ iii.logcs.consignee }} [ {{ iii.logcs.tel }} ]</td>
+            <td>{{ iii.fee.paid|stringformat:"0.2f" }} | {{ iii.fee.kpchng|stringformat:"0.2f" }} | {{ iii.fee.total|stringformat:"0.2f" }} | {{ iii.fnc.cod.get_cod_display }}</td>
+            {% status iii %}
+            {% oprt iii %}
           </tr>
-{% if i.items %}
-{% for i in i.items %}
+        {% if iii.items %}
+          {% for item in iii.items %}
           <tr align="center">
-            <td align="right" nowrap="true" colspan="2">{{ i.name }}</td>
-            <td>{{ i.spec }}</td>
-            <td>{{ i.num }}</td>
-            <td><span class="wow_item_{{ i.status }}">{{ i.get_status_display }}</span></td>
-            {% optr i %}
+            <td align="right" nowrap="true" colspan="2">{{ item.name }}</td>
+            <td>{{ item.spec }}</td>
+            <td>{{ item.num }}</td>
+            <td><span class="status_{{ item.status }}">{{ item.get_status_display }}</span></td>
+            {% oprt item %}
           </tr>
-{% endfor %}
-{% else %}
-{% for i in i.pro_set.all %}
+          {% endfor %}
+        {% else %}
+          {% for item in iii.pro_set.all %}
           <tr align="center">
-            <td align="right" nowrap="true" colspan="2">{{ i.name }}</td>
-            <td>{{ i.spec }}</td>
-            <td>{{ i.num }}</td>
-            <td><span class="wow_item_{{ i.status }}">{{ i.get_status_display }}</span></td>
+            <td align="right" nowrap="true" colspan="2">{{ item.name }}</td>
+            <td>{{ item.spec }}</td>
+            <td>{{ item.num }}</td>
+            <td><span class="status_{{ item.status }}">{{ item.get_status_display }}</span></td>
             <td>&nbsp;</td>
           </tr>
-{% endfor %}
-{% endif %}
+          {% endfor %}
+        {% endif %}
           <tr>
             <td align="center">地址</td>
-            <td colspan="5"><a href="{% url 'logistics:baiduMap' %}?address={{ i.logcs.address|urlencode }}" target="_blank">[ {{ i.logcs.area }} ] {{ i.logcs.address }}</a></td>
+            <td colspan="5"><a href="{% url 'logistics:baiduMap' %}?address={{ iii.logcs.address|urlencode }}" target="_blank">[ {{ iii.logcs.area }} ] {{ iii.logcs.address }}</a></td>
           </tr>
           <tr align="center">
             <td>时间</td>
-            <td align="left">{{ i.logcs.date|date:"Y-m-d" }} | {{ i.logcs.stime|time:"H:i" }} - {{ i.logcs.etime|time:"H:i" }}</td>
+            <td align="left">{{ iii.logcs.date|date:"Y-m-d" }} | {{ iii.logcs.stime|time:"H:i" }} - {{ iii.logcs.etime|time:"H:i" }}</td>
             <td>预发货</td>
-            <td>{{ i.logcs.lstime|time:"H:i" }}</td>
-            <td>{% if i.form %}{{ i.form.advance }}{% else %}{{ i.logcs.get_advance_display }}{% endif %}</td>
-            <td>{% if i.form %}{{ i.form.dman }}{% else %}{{ i.logcs.dman.last_name }}{{ i.logcs.dman.first_name }}{% endif %}</td>
+            <td>{{ iii.logcs.lstime|time:"H:i" }}</td>
+            <td>{% if iii.form %}{{ iii.form.advance }}{% else %}{{ iii.logcs.get_advance_display }}{% endif %}</td>
+            <td>{% if iii.form %}{{ iii.form.dman }}{% else %}{{ iii.logcs.dman.last_name }}{{ iii.logcs.dman.first_name }}{% endif %}</td>
           </tr>
           <tr>
             <td align="center">备注</td>
-              <td colspan="6">{{ i.logcs.note }}</td>
+              <td colspan="6">{{ iii.logcs.note }}</td>
           </tr>
+    {% endfor %}
+  {% endfor %}
+
 {% empty %}
           <tr>
             <td align="center" colspan="10">无记录</td>
