--- a/office/static/office/css/style.css
+++ b/office/static/office/css/style.css
@@ -121,7 +121,7 @@ a.button:active{
 
 .status_0{ color: #9D9D9D !important; }
 .status_1{ color: #000000 !important; }
-.status_2{ color: #3e4145 !important; }
+.status_2{ color: #007d65 !important; }
 .status_3{ color: #0081FF !important; }
 .status_4{ color: #C600FF !important; }
 .status_5{ color: #FF8000 !important; }
