--- a/finance/templates/financeui.htm
+++ b/finance/templates/financeui.htm
@@ -18,7 +18,7 @@
             <td><a href="{% url 'order:viewOrd' i.sn %}">{{ i.sn }}</a></td>
             <td>{{ i.logcs.consignee }} [ {{ i.logcs.tel }} ]</td>
             <td>{{ i.fee.paid|stringformat:"0.2f" }} | {{ i.fee.kpchng|stringformat:"0.2f" }} | {{ i.fee.total|stringformat:"0.2f" }} | {{ i.fnc.cod.get_cod_display }}</td>
-            <td>{{ i.get_status_display }} | {{ i.fnc.get_status_display }} | {{ i.logcs.get_status_display }}</td>
+            {% status i %}
             {% oprt i %}
           </tr>
 {% for item in i.orditem_set.all %}
@@ -54,4 +54,8 @@
 {% endfor %}
           {% include 'page.htm' %}
       </table>
+{% endblock %}
+
+{% block js %}
+      <script type="text/javascript" src="{{ STATIC_URL }}finance/js/fnc.configuration.js"></script>
 {% endblock %}
