--- a/logistics/templates/logcsview.htm
+++ b/logistics/templates/logcsview.htm
@@ -2,6 +2,7 @@
 
 {% block content %}
       {% include 'search.htm' %}
+      {% load tags %}
       {% regroup oList by logcs.date as newsList %}
         <table cellpadding="3" cellspacing="1" width="100%">
           <tr>
@@ -14,21 +15,21 @@
 {% regroup i.list by logcs.ltime as newStime %}
 
   {% for ii in newStime %}
-          <tr class="tr_border_top_black">
+          <tr class="tr_border_top_rare">
             <td colspan="10">{{ i.grouper|date:"Y-m-d"  }} | {{ ii.grouper }} | <span class="wow_item_8">{{ ii.list|length }}</span></td>
           </tr>
       {% for iii in ii.list %}
-                <tr align="center">
+                <tr align="center" class="tr_border_top_black">
                   <td width="80px"><a href="{% url 'order:viewOrd' iii.sn %}">{{ iii.sn }}</a></td>
                   <td align="left"><a href="{% url 'logistics:baiduMap' %}?address={{ iii.logcs.address|urlencode }}" target="_blank">[ {{ iii.logcs.area }} ] {{ iii.logcs.address }}</a></td>
                   <td width="220px">{% if iii.form %}{{ iii.form.dman }}{% else %}{{ iii.logcs.dman.last_name }}{{ iii.logcs.dman.first_name }}{% endif %}</td>
-                  <td>{{ iii.get_status_display }} | {{ iii.fnc.get_status_display }} | {{ iii.logcs.get_status_display }}</td>
+                  {% status iii %}
                 </tr>
         {% for item in iii.items %}
                 <tr align="center">
                   <td align="right" nowrap="true" colspan="2">{{ item.name }} {{ item.spec }} [ {{ item.num }} ]</td>
                   <td>&nbsp;</td>
-                  <td>{{ item.get_status_display }}</td>
+                  {% proStatus item %}
                 </tr>
         {% endfor %}
     {% endfor %}
