--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -143,7 +143,7 @@
           <li><a href="{% url 'order:newOrdFrm' %}">新订单</a></li>
           <li><a href="{% url 'logistics:baiduMap' %}">地图</a></li>
           <li><a href="{% url 'logistics:logcsView' %}?c=-1">物流安排</a></li>
-          <li><a href="{% url 'print:printOrd' %}">票据打印</a></li>
+          <!-- <li><a href="{% url 'print:printOrd' %}">票据打印</a></li> -->
         </ul>
         <span id="adminName">{{ request.user.username }} [ {% if request.user.is_superuser %}超级管理员{% else %}普通管理{% endif %} ]</span>
     </div>
