--- a/office/static/office/css/style.css
+++ b/office/static/office/css/style.css
@@ -134,6 +134,12 @@ a.button:active{
 .fr{float: right;}
 .fl{float: left;}
 
+.ml5{margin-left:5px}
+.ml10{margin-left:10px}
+
+.mr5{margin-right:5px}
+.mr10{margin-right:10px}
+
 
 table{
   background: #EEF8F9;
