--- a/order/templates/orderview.htm
+++ b/order/templates/orderview.htm
@@ -59,7 +59,7 @@
                 </tr>
                 <tr>
                     <td>电话：</td>
-                    <td>{{ o.logcs.address }}</td>
+                    <td>{{ o.logcs.tel }}</td>
                 </tr>
                 <tr>
                     <td>最佳收货时间：</td>
