--- a/logistics/templates/logistics.htm
+++ b/logistics/templates/logistics.htm
@@ -6,7 +6,7 @@
       <table cellpadding="3" cellspacing="1" width="100%" class="sortTable">
           <tr>
             <th>类型</th>
-            <th>订单编号</th>
+            <th width="160px">订单编号</th>
             <th>联系人</th>
             <th>应收 | 找补 | 实收 | 付款方式</th>
             <th>状态</th>
