新增  - 后台新用户快速注册
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/new31/templates/office.base.htm
+++ b/new31/templates/office.base.htm
@@ -99,11 +99,10 @@
         </div>
       </li>
       <li>
-        <a href="{% url 'account:myOrd' %}/member/" class="nav">会员管理</a>
+        <a href="{% url 'account:member' %}//" class="nav">会员管理</a>
         <div class="messagePop" style="display:none;">
           <ul>
-            <li><a href="{% url 'account:myOrd' %}">会员信息</a></li>
-            <li><a href="{% url 'account:myOrd' %}">会员积分</a></li>
+            <li><a href="{% url 'account:member' %}">会员信息</a></li>
           </ul>
         </div>
       </li>
