--- a/order/templates/orderview.htm
+++ b/order/templates/orderview.htm
@@ -81,7 +81,7 @@
                 <tr align="center">
                     <td>{{ i.user.last_name }}{{ i.user.first_name }}</td>
                     <td>{{ i.time|date:"Y-m-d H:i" }} </td>
-                    <td>{{ i.act }}</td>
+                    <td>{{ i.get_act_display }}</td>
                 </tr>
 {% endfor %}
             </table>
