修正  - 新单订单提交与订单编辑提交因误操作使得信息覆盖问题  - 现根据表单隐藏属性表示其表单作用  - sn存在则编辑提交,不存在则新单提交  - 修改相应装饰器, 判定后进行信息保存
Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/order/templates/orderneworedit.htm
+++ b/order/templates/orderneworedit.htm
@@ -50,7 +50,11 @@
           </table>
           <table width="100%" cellpadding="3" cellspacing="1" id="ord">
             <tr>
-              <td width="100px" align="right">{{ ord.user.label }}</td>
+              <td align="right">{{ ord.sn.label }}：</td>
+              <td>{% if ord.sn.value %}{{ ord.sn.value }}{% else %}新单{% endif %}{{ ord.sn }}</td>
+            </tr>
+            <tr>
+              <td width="100px" align="right">{{ ord.user.label }}：</td>
               <td width="90%">{{ ord.user }}<input type="button" value="会员查询" class="button" id="checkUser" /></td>
             </tr>
             <tr>
