修正  - 前台购物车订单提交 日志提交不成功  - 前台购物车支付方式部分隐藏
待修正
 - 前台匿名下单无法提交日志
 - 原因为log模型User字段必填




Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/cart/templates/consignee.htm
+++ b/cart/templates/consignee.htm
@@ -15,8 +15,8 @@
                 <form action="/cart/checkout/" method="POST" name="checkout" id="checkout">
                     <table width="100%" id="fnc">                        
                         <tr>
-                            <td align="right" width="100px">{{ fnc.spay.label }}：</td>
-                            <td>{{ fnc.spay }}</td>
+                            <td align="right" width="100px">{{ fnc.pay.label }}：</td>
+                            <td>{{ fnc.pay }}</td>
                         </tr>
                     </table>
                     <table width="100%" id="logcs">
